--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Home</a></li>
                 <li><a href="/todo">Todo</a></li>
-                <li><a href="/accounts/register">Account</a></li>
+                <li><a href="/accounts/register">Register</a></li>
+                <li><a href="/accounts/login">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -34,5 +35,6 @@
     <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/service.js"></script>
+    <script src="js/directive.js"></script>
 </body>
 </html>
