add working logout code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="/todo">Todo</a></li>
                 <li><a href="/accounts/register">Register</a></li>
                 <li><a href="/accounts/login">Login</a></li>
+                <li><a href="/accounts/logout">Logout</a></li>
             </ul>
         </div>
     </nav>
