--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="TodoApp">
 <head>
     <title>Angular Todo</title>
-    <base href="/angular-todo/"> 
+    <base href="/"> 
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
